# grafo

./: CMakeLists.txt  desenvolvimento.ods  gerador.py
bool/: bitmap.cpp  bitmap.h  main.cpp
bool/pattern-match-query/: graph.cpp  graph.h  main.cpp
gerador/: Main.py  README.md  codigos ajuda.txt  gerador.py  import.query  query
gerador grafos aleatorio/: database_1.py
gerador grafos aleatorio/RandomizedDataBase/: READ-ME.txt  database_1.graph  database_1_1.query
gerador/linkingtree/: linkingtree  linkingtree.cpp  resp.graph  resp.query
lista/: CMakeLists.txt
lista/pattern-match-query/: bitmap.cpp  graph.cpp  graph.h  graphbitmap.cpp  graphbitmap.h  main.cpp  vertex.cpp
pattern-match-query/: bitmap.cpp  bitmap.h  common.h  graph.cpp  graph.h  graphbitmap.cpp  graphbitmap.h  main.cpp  vertex.cpp  vertex.h
pattern-match-query/Datasets/: SF
verdadeiros/: CMakeLists.txt
verdadeiros/pattern-match-query/: bitmap.cpp  bitmap.h  graph.cpp  graph.h  main.cpp
verdadeiros/pattern-match-query/Datasets/: YeastS.net
